--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.8",
     "@testing-library/react": "^13.4.0",
+    "antd": "^5.0.3",
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
