--- a/package.json
+++ b/package.json
@@ -10,14 +10,12 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.4",
+    "@heroicons/react": "^2.0.13",
     "@paypal/react-paypal-js": "^7.8.1",
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.9.0",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.8",
     "@testing-library/react": "^13.4.0",
-    "antd": "^5.0.3",
+    "antd": "^5.0.5",
     "axios": "^1.1.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -34,6 +32,10 @@
     "web-vitals": "^3.1.0"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/typography": "^0.5.8",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
