--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/react": "^13.4.0",
     "antd": "^5.0.5",
     "axios": "^1.1.3",
+    "country-state-city": "^3.1.2",
     "heroicons-react": "^1.4.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
