--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
+    "tw-elements": "^1.0.0-alpha13",
     "web-vitals": "^3.1.0"
   },
   "devDependencies": {
