--- a/package.json
+++ b/package.json
@@ -15,35 +15,32 @@
     "@redux-devtools/extension": "^3.2.3",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "7.2.1",
     "@windmill/react-ui": "^0.6.0",
     "antd": "^5.0.5",
     "axios": "^1.1.3",
+    "chart.js": "^4.2.0",
+    "classnames": "2.2.6",
     "country-state-city": "^3.1.2",
     "cssnano": "^4.1.10",
+    "faker": "4.1.0",
     "heroicons-react": "^1.4.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.29.0",
+    "react-transition-group": "4.4.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "tw-elements": "^1.0.0-alpha13",
-    "web-vitals": "^3.1.0",
-
-    "@testing-library/user-event": "7.2.1",
-    "chart.js": "4.2.0",
-    "classnames": "2.2.6",
-    "faker": "4.1.0",
-    "react-chartjs-2": "5.2.0",
-    "react-transition-group": "4.4.1"
-
-
+    "web-vitals": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
